--- a/index.html
+++ b/index.html
@@ -46,51 +46,19 @@
       <div class = "buttonA" title="Вращать камеру" id="btnRotateCamera"></div>
       <div class = "buttonA" title="Во весь экран" id="btnFullscrn"></div>
     </div>
+
+    <div id = "plyRed"></div>
     <div class = "cntrlPanel" id="controlPanel">
       <div class = "buttonA" title="Не нажимай эту кнопку!" id="btnTemp"></div>
-      <div class = "buttonA" title="Скрыть/отобразить броню" id="btnShowHideBronya"></div>
+      <div class = "buttonA" title="Открыть/закрыть установку" id="btnShowHideBronya"></div>
       <div class = "buttonA" title="Режим выбора объекта" id="btnSelectObject"></div>
-      <div class = "buttonA" title="Показать общую информацию" id="btnShow1LevellInfo"></div>
-      <div class = "buttonA" title="Показать подробную информацию" id="btnShow2LevellInfo"></div>
+      <div class = "buttonA" title="Общая информация" id="btnShow1LevellInfo"></div>
+      <div class = "buttonA" title="Подробная информация" id="btnShow2LevellInfo"></div>
       <div class = "buttonA" title="Как это работает" id="btnShowHowItWork"></div>
       <div class = "buttonA" title="Остановить анимацию" id="btnStopAnim"></div>
     </div>
-    <section style = "display: none">
-      <p>Современная экономичная климатическая установка.</p>
-      <p>Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями.</p>
-      <p id = "text11">Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях.</p>
-      <p>Предназначено для обеспечения поддержания в помещении необходимой температуры воздуха.</p>
-      <p>Применяется для кондиционирования помещений, имеющих большую площадь, или же состоящих из нескольких комнат, соединенных общей вентиляционной системой.</p>
-      <p>Установить оборудование можно как на крыше, так и на специальных рамных конструкциях.</p>
-      <p>Высокая производительность, эффективно для оснащения торговых центров, кинотеатров, спортивных объектов.</p>
-      <p>Может быть оборудовано специальными приспособлениями для подогрева воздуха, поступающего с улицы.</p>
-      <p>Наиболее целесообразна установка на одно - и двухэтажных зданиях, имеющих большую площадь внутренних помещений.</p>
-      <p>Помогает сэкономить на покупке дополнительного отопительного оборудования.</p>
-      <p>Несомненным преимуществом является надежность и простота в эксплуатации, а также то, что они не портят дизайн своим внешним видом.</p>
-      <p id = "ust1_1LevellInfo1">Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями</p>
-      <p id = "ust1_1LevellInfo2">Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях</p>
-      <p id = "ust1_1LevellInfo3">Предназначено для обеспечения поддержания в помещении необходимой температуры воздуха</p>
-      <p id = "ust1_1LevellInfo4">Наиболее целесообразна установка на одно - и двухэтажных зданиях, имеющих большую площадь внутренних помещений</p>
-      <p id = "ust1_1LevellInfo5">Установить оборудование можно как на крыше, так и на специальных рамных конструкциях</p>
-      <p id = "ust1_1LevellInfo6">Высокая производительность, эффективно для оснащения торговых центров, кинотеатров, спортивных объектов</p>
-      <p id = "ust1_1LevellInfo7">Помогает сэкономить на покупке дополнительного отопительного оборудования</p>
 
-      <p id = "ust1_component1">Осевые вентиляторы конденсатора</p>
-      <p id = "ust1_component3">Воздушный конденсатор<br>и компрессорный блок</p>
-      <p id = "ust1_component4">Воздушый фильтр<br>вытяжного воздуха</p>
-      <p id = "ust1_component5">Фреоновый испаритель<br>с каплеуловителем</p>
-      <p id = "ust1_component6">Приточный и вытяжной вентиляторы<br>с ЕС-двигателем</p>
-      <p id = "ust1_component7">Пластинчатый рекуператор</p>
-      <p id = "ust1_component8">Воздушный фильтр приточного воздуха</p>
-      <p id = "ust1_component9">Воздухозаборный клапан</p>
-      <p id = "ust1_component10">Клапан выбросного воздуха</p>
-      <p id = "ust1_component11">Водяной нагреватель</p>
-      <p id = "ust1_component12">Регулируемый воздухораспределитель</p>
-    </section>
-
-
-    <div id = "textblock1">
-    </div>
+    <div id = "textblock1"></div>
 
     <div id="loading">
       <div id="center"><div class="content">LOADING 3D MODEL...</div></div>
@@ -156,5 +124,38 @@
   <script src="js/HolodUstModes.js"></script>
   <script src="js/main.js"></script>
   <script src="js/finalOutput.js"></script>
+
+  <section style = "display: none">
+    <p>Современная экономичная климатическая установка.</p>
+    <p>Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями.</p>
+    <p>Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях.</p>
+    <p>Предназначено для обеспечения поддержания в помещении необходимой температуры воздуха.</p>
+    <p>Применяется для кондиционирования помещений, имеющих большую площадь, или же состоящих из нескольких комнат, соединенных общей вентиляционной системой.</p>
+    <p>Установить оборудование можно как на крыше, так и на специальных рамных конструкциях.</p>
+    <p>Высокая производительность, эффективно для оснащения торговых центров, кинотеатров, спортивных объектов.</p>
+    <p>Может быть оборудовано специальными приспособлениями для подогрева воздуха, поступающего с улицы.</p>
+    <p>Наиболее целесообразна установка на одно - и двухэтажных зданиях, имеющих большую площадь внутренних помещений.</p>
+    <p>Помогает сэкономить на покупке дополнительного отопительного оборудования.</p>
+    <p>Несомненным преимуществом является надежность и простота в эксплуатации, а также то, что они не портят дизайн своим внешним видом.</p>
+    <p id = "ust1_1LevellInfo1">Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями</p>
+    <p id = "ust1_1LevellInfo2">Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях</p>
+    <p id = "ust1_1LevellInfo3">Предназначено для обеспечения поддержания в помещении необходимой температуры воздуха</p>
+    <p id = "ust1_1LevellInfo4">Наиболее целесообразна установка на одно - и двухэтажных зданиях, имеющих большую площадь внутренних помещений</p>
+    <p id = "ust1_1LevellInfo5">Установить оборудование можно как на крыше, так и на специальных рамных конструкциях</p>
+    <p id = "ust1_1LevellInfo6">Высокая производительность, эффективно для оснащения торговых центров, кинотеатров, спортивных объектов</p>
+    <p id = "ust1_1LevellInfo7">Помогает сэкономить на покупке дополнительного отопительного оборудования</p>
+
+    <p id = "ust1_component1">Осевые вентиляторы конденсатора</p>
+    <p id = "ust1_component3">Воздушный конденсатор<br>и компрессорный блок</p>
+    <p id = "ust1_component4">Воздушый фильтр<br>вытяжного воздуха</p>
+    <p id = "ust1_component5">Фреоновый испаритель<br>с каплеуловителем</p>
+    <p id = "ust1_component6">Приточный и вытяжной вентиляторы<br>с ЕС-двигателем</p>
+    <p id = "ust1_component7">Пластинчатый рекуператор</p>
+    <p id = "ust1_component8">Воздушный фильтр приточного воздуха</p>
+    <p id = "ust1_component9">Воздухозаборный клапан</p>
+    <p id = "ust1_component10">Клапан выбросного воздуха</p>
+    <p id = "ust1_component11">Водяной нагреватель</p>
+    <p id = "ust1_component12">Регулируемый воздухораспределитель</p>
+  </section>
 </body>
 </html>
