--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </script>
   <noscript><div><img src="https://mc.yandex.ru/watch/48525350" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
   <!-- /Yandex.Metrika counter -->
-  
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88386892-3"></script>
   <script>
@@ -45,7 +45,7 @@
   <link rel="stylesheet" href = "css/anims.css"></link>
   <link rel="stylesheet" href = "css/style.css"></link>
   <link rel="stylesheet" href = "css/buttons.css"></link>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
 </head>
 <body>
 
