--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
 </head>
 <body>
+  <script>
+  console.log('Начало body');
+  </script>
 
   <!-- <canvas id = "canvas-exemple"></canvas> -->
   <div class="container">
@@ -135,6 +138,9 @@
       //gl_FragColor = vec4(vReflect, 1.0); // return redish-purple
     }
   </script>
+  <script>
+  console.log('Начало загрузки скриптов');
+  </script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/three.min91.js"></script>
   <script src="js/libs/inflate.min.js"></script>
@@ -161,7 +167,9 @@
   <script src="js/main.js"></script>
   <script src="js/finalOutput.js"></script>
 
-  <!-- <script src="js/main.min.js"></script> -->
+  <script>
+  console.log('Конец загрузки скриптов');
+  </script>
 
   <section style = "display: none">
     <p>Современная экономичная климатическая установка.</p>
@@ -195,5 +203,9 @@
     <p id = "ust1_component11">Водяной нагреватель</p>
     <p id = "ust1_component12">Регулируемый воздухораспределитель</p>
   </section>
+
+  <script>
+  console.log('конец боди');
+  </script>
 </body>
 </html>
