--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   <meta charset="utf-8">
   <title>WebGL Demo</title>
   <link rel="icon" type="image/png" href="images/logotip_red_for_krug.png" />
-  <link rel="stylesheet" href = "css/fonts.css"></link>
+  <!-- <link rel="stylesheet" href = "css/fonts.css"></link> -->
   <link rel="stylesheet" href = "css/style.css"></link>
-  <link rel="stylesheet" href = "css/buttons.css"></link>
+  <!-- <link rel="stylesheet" href = "css/buttons.css"></link> -->
   <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
 </head>
 <body>
@@ -207,5 +207,8 @@
   <script>
   console.log('конец боди');
   </script>
+
+  <link rel="stylesheet" href = "css/fonts.css"></link>
+  <link rel="stylesheet" href = "css/buttons.css"></link>
 </body>
 </html>
