--- a/index.html
+++ b/index.html
@@ -42,16 +42,12 @@
   <meta charset="utf-8">
   <title>WebGL Demo</title>
   <link rel="icon" type="image/png" href="images/logotip_red_for_krug.png" />
-  <!-- <link rel="stylesheet" href = "css/fonts.css"></link> -->
+  <link rel="stylesheet" href = "css/fonts.css"></link>
   <link rel="stylesheet" href = "css/style.css"></link>
-  <!-- <link rel="stylesheet" href = "css/buttons.css"></link> -->
+  <link rel="stylesheet" href = "css/buttons.css"></link>
   <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
 </head>
 <body>
-  <script>
-  console.log('Начало body');
-  </script>
-
   <!-- <canvas id = "canvas-exemple"></canvas> -->
   <div class="container">
     <canvas id = "canvas-exemple"></canvas>
@@ -138,9 +134,6 @@
       //gl_FragColor = vec4(vReflect, 1.0); // return redish-purple
     }
   </script>
-  <script>
-  console.log('Начало загрузки скриптов');
-  </script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/three.min91.js"></script>
   <script src="js/libs/inflate.min.js"></script>
@@ -152,6 +145,7 @@
   <script src="js/materials.js"></script>
   <script src="js/matHolodSetup.js"></script>
   <script src="js/matStoikiSetup.js"></script>
+  <script>console.log( '3d models loading start...');</script>
   <script src="js/loadHolodUst.js"></script>
   <script src="js/loadStoiki.js"></script>
 
@@ -166,10 +160,6 @@
   <script src="js/HolodUstModes.js"></script>
   <script src="js/main.js"></script>
   <script src="js/finalOutput.js"></script>
-
-  <script>
-  console.log('Конец загрузки скриптов');
-  </script>
 
   <section style = "display: none">
     <p>Современная экономичная климатическая установка.</p>
@@ -204,11 +194,5 @@
     <p id = "ust1_component12">Регулируемый воздухораспределитель</p>
   </section>
 
-  <script>
-  console.log('конец боди');
-  </script>
-
-  <link rel="stylesheet" href = "css/fonts.css"></link>
-  <link rel="stylesheet" href = "css/buttons.css"></link>
 </body>
 </html>
