--- a/index.html
+++ b/index.html
@@ -138,18 +138,17 @@
   <script src="js/three.min91.js"></script>
   <script src="js/libs/inflate.min.js"></script>
   <script src="js/loaders/FBXLoader.js"></script>
-  <script src="js/resoursces.js"></script>
-  <script src="js/loadTextures.js"></script>
   <script src="js/shaders/FresnelShader.js"></script>
+  <script src="js/controls/OrbitControls.js"></script>
+
+  <!-- <script src="js/resoursces.js"></script>
+  <script src="js/loadTextures.js"></script>
   <script src="js/GhostShader.js"></script>
   <script src="js/materials.js"></script>
   <script src="js/matHolodSetup.js"></script>
   <script src="js/matStoikiSetup.js"></script>
-  <script>console.log( '3d models loading start...');</script>
   <script src="js/loadHolodUst.js"></script>
   <script src="js/loadStoiki.js"></script>
-
-  <script src="js/controls/OrbitControls.js"></script>
 
   <script src="js/GUIFunctions.js"></script>
   <script src="js/easingFunc.js"></script>
@@ -159,7 +158,9 @@
   <script src="js/SceneSetup.js"></script>
   <script src="js/HolodUstModes.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/finalOutput.js"></script>
+  <script src="js/finalOutput.js"></script> -->
+
+  <script src="js/main.min.js"></script>
 
   <section style = "display: none">
     <p>Современная экономичная климатическая установка.</p>
