--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <script src="js/shaders/FresnelShader.js"></script>
   <script src="js/controls/OrbitControls.js"></script>
 
-  <!-- <script src="js/resoursces.js"></script>
+  <script src="js/resoursces.js"></script>
   <script src="js/loadTextures.js"></script>
   <script src="js/GhostShader.js"></script>
   <script src="js/materials.js"></script>
@@ -158,9 +158,9 @@
   <script src="js/SceneSetup.js"></script>
   <script src="js/HolodUstModes.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/finalOutput.js"></script> -->
+  <script src="js/finalOutput.js"></script>
 
-  <script src="js/main.min.js"></script>
+  <!-- <script src="js/main.min.js"></script> -->
 
   <section style = "display: none">
     <p>Современная экономичная климатическая установка.</p>
