--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
     <div class = "modelsSelect" id = "btnModelsSelect1"></div>
     <div class = "modelsSelect" id = "btnModelsSelect2"></div>
+    <div class = "modelsSelect" id = "btnModelsSelect3"></div>
 
     <div class = "cntrlPanel" id="cameraControl">
       <div class = "buttonB" title="Сбросить камеру" id="btnResetCemera"></div>
@@ -147,8 +148,10 @@
   <script src="js/materials.js"></script>
   <script src="js/matHolodSetup.js"></script>
   <script src="js/matStoikiSetup.js"></script>
+  <script src="js/matProfilSetup.js"></script>
   <script src="js/loadHolodUst.js"></script>
   <script src="js/loadStoiki.js"></script>
+  <script src="js/loadProfil.js"></script>
 
   <script src="js/GUIFunctions.js"></script>
   <script src="js/easingFunc.js"></script>
