--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
       <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
       <div id="header2">3dfine@mail.ru<br>+7 919 638 91 52</div>
     </div>
+    <div id="WebGLInfo">
+      WebGL (Web Graphics Library) - программная библиотека
+        для языка JavaScript, предназначенная для визуализации интерактивной 3D и 2D графики
+        в веббраузере без использования плагинов.
+    </div>
 
     <div class="overlay" style = "display: none">
       <div><span id="param1"></span></div>
