--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
       <div id="header2">3dfine@mail.ru<br>+7 919 638 91 52</div>
     </div>
     <div id="WebGLInfo">
-      WebGL (Web Graphics Library) - программная библиотека
-        для языка JavaScript, предназначенная для визуализации интерактивной 3D и 2D графики
-        в веббраузере без использования плагинов.
+      WebGL (Web Graphics Library) - технология, предназначенная для визуализации интерактивной 3D и 2D графики
+        в браузере без использования плагинов.
     </div>
 
     <div class="overlay" style = "display: none">
