--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     <div id = "help1"></div>
 
     <div id="loading">
-      <div id="center"><div class="content">LOADING 3D MODEL...</div></div>
+      <!-- <div id="center"><div class="content">LOADING 3D MODEL...</div></div>       -->
+      <div id="center"><div class="content">ЗАГРУЗКА 3D МОДЕЛИ...</div></div>
       <div id="blockloading">
         <div id="blockloading_progress"></div>
       </div>
