--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class = "modelsSelect" id = "btnModelsSelect1"></div>
     <div class = "modelsSelect" id = "btnModelsSelect2"></div>
     <div class = "modelsSelect" id = "btnModelsSelect3"></div>
+    <div class = "modelsSelect" id = "btnModelsSelect4"></div>    
 
     <div class = "cntrlPanel" id="cameraControl">
       <div class = "buttonB" title="Сбросить камеру" id="btnResetCemera"></div>
@@ -121,6 +122,7 @@
   <script src="js/loadHolodUst.js"></script>
   <script src="js/loadStoiki.js"></script>
   <script src="js/loadProfil.js"></script>
+  <script src="js/loadUsadba.js"></script>
 
   <script src="js/GUIFunctions.js"></script>
   <script src="js/easingFunc.js"></script>
@@ -196,14 +198,13 @@
   <!-- /Yandex.Metrika counter -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88386892-3"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88386892-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-88386892-3');
-  </script>
+  </script> -->
 
 </body>
 </html>
