--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class = "modelsSelect" id = "btnModelsSelect1"></div>
     <div class = "modelsSelect" id = "btnModelsSelect2"></div>
     <div class = "modelsSelect" id = "btnModelsSelect3"></div>
-    <div class = "modelsSelect" id = "btnModelsSelect4"></div>    
+    <div class = "modelsSelect" id = "btnModelsSelect4"></div>
 
     <div class = "cntrlPanel" id="cameraControl">
       <div class = "buttonB" title="Сбросить камеру" id="btnResetCemera"></div>
@@ -59,6 +59,12 @@
       <div class = "buttonA" id="btnColor2"></div>
       <div class = "buttonA" id="btnColor3"></div>
     </div>
+    <div class = "cntrlPanel" id="controlUsadba">
+      <div class = "buttonA" id="btnUsadbaFull">F</div>
+      <div class = "buttonA" id="btn2Floor" >2F</div>
+      <div class = "buttonA" id="btn1Floor">1F</div>
+    </div>
+
 
     <div id = "textblock1"></div>
     <div id = "descriptionblock"></div>
