--- a/index.html
+++ b/index.html
@@ -63,12 +63,30 @@
       <div class = "buttonA" id="btnUsadbaFull">R</div>
       <div class = "buttonA" id="btn2Floor" >2F</div>
       <div class = "buttonA" id="btn1Floor">1F</div>
+      <div class = "buttonA" id="btn1UsadbaInfo">i</div>
     </div>
 
 
     <div id = "textblock1"></div>
     <div id = "descriptionblock"></div>
-
+    <div id="textblockUsadbaFloor1">
+        <div class="clUsadba" id = "textblockUsadba0">Гостинная<br>29.7 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba1">Спальня<br>12.3 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba2">Кухня<br>10.5 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba3">Холл<br>9.2 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba4">Санузел<br>5.6 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba5">Бойлерная<br>6.1 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba6">Тамбур<br>3.9 м<sup><small>2</small></sup></div>
+    </div>
+    <div id="textblockUsadbaFloor2">
+        <div class="clUsadba" id = "textblockUsadba10">Спальня<br>17.2 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba11">Спальня<br>16.1 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba12">Спальня<br>14.5 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba13">Холл<br>7.7 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba14">Санузел<br>10.6 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba15">Гардероб<br>3.1 м<sup><small>2</small></sup></div>
+        <div class="clUsadba" id = "textblockUsadba16">Гардероб<br>3.2 м<sup><small>2</small></sup></div>
+    </div>
     <div id = "help1"></div>
 
     <div id="loading">
