--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <!-- <div id="header3">3D PRESENTATION</div> -->
       <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
-      <div id="header2">3dinsite@gmail.com<br>+7 919 638 91 52</div>
+      <div id="header2">3dfine@mail.ru<br>+7 919 638 91 52</div>
     </div>
     <div id="WebGLInfo">
       WebGL (Web Graphics Library) - технология, предназначенная для визуализации интерактивной 3D и 2D графики
