--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
       <div><span id="param2"></span></div>
     </div>
 
-    <div class = "modelsSelect" id = "btnModelsSelect1"></div>
-    <div class = "modelsSelect" id = "btnModelsSelect2"></div>
-    <div class = "modelsSelect" id = "btnModelsSelect3"></div>
-    <div class = "modelsSelect" id = "btnModelsSelect4"></div>
-
+    <div  id="clModelsSelect">
+      <div class = "modelsSelect" id = "btnModelsSelect4"></div>
+      <div class = "modelsSelect" id = "btnModelsSelect5"></div>      
+      <div class = "modelsSelect" id = "btnModelsSelect1"></div>
+      <div class = "modelsSelect" id = "btnModelsSelect2"></div>
+      <div class = "modelsSelect" id = "btnModelsSelect3"></div>
+    </div>
     <div class = "cntrlPanel" id="cameraControl">
       <div class = "buttonB" title="Сбросить камеру" id="btnResetCemera"></div>
       <div class = "buttonB" title="Вращать камеру" id="btnRotateCamera"></div>
@@ -60,10 +62,10 @@
       <div class = "buttonA" id="btnColor3"></div>
     </div>
     <div class = "cntrlPanel" id="controlUsadba">
-      <div class = "buttonA" id="btnUsadbaFull">R</div>
       <div class = "buttonA" id="btn2Floor" >2F</div>
       <div class = "buttonA" id="btn1Floor">1F</div>
       <div class = "buttonA" id="btn1UsadbaInfo">i</div>
+      <div class = "buttonA" id="btnUsadbaFull">R</div>
     </div>
 
 
@@ -87,7 +89,7 @@
         <div class="clUsadba" id = "textblockUsadba15">Гардероб<br>3.1 м<sup><small>2</small></sup></div>
         <div class="clUsadba" id = "textblockUsadba16">Гардероб<br>3.2 м<sup><small>2</small></sup></div>
     </div>
-    <div id = "help1"></div>
+    <!-- <div id = "help1"></div> -->
 
     <div id="loading">
       <!-- <div id="center"><div class="content">LOADING 3D MODEL...</div></div>       -->
@@ -147,6 +149,7 @@
   <script src="js/loadStoiki.js"></script>
   <script src="js/loadProfil.js"></script>
   <script src="js/loadUsadba.js"></script>
+  <script src="js/loadKotedg.js"></script>
 
   <script src="js/GUIFunctions.js"></script>
   <script src="js/easingFunc.js"></script>
