--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div  id="clModelsSelect">
       <div class = "modelsSelect" id = "btnModelsSelect4"></div>
-      <div class = "modelsSelect" id = "btnModelsSelect5"></div>      
+      <div class = "modelsSelect" id = "btnModelsSelect5"></div>
       <div class = "modelsSelect" id = "btnModelsSelect1"></div>
       <div class = "modelsSelect" id = "btnModelsSelect2"></div>
       <div class = "modelsSelect" id = "btnModelsSelect3"></div>
@@ -62,8 +62,8 @@
       <div class = "buttonA" id="btnColor3"></div>
     </div>
     <div class = "cntrlPanel" id="controlUsadba">
-      <div class = "buttonA" id="btn2Floor" >2F</div>
-      <div class = "buttonA" id="btn1Floor">1F</div>
+      <div class = "buttonA" id="btn2Floor" >2Э</div>
+      <div class = "buttonA" id="btn1Floor">1Э</div>
       <div class = "buttonA" id="btn1UsadbaInfo">i</div>
       <div class = "buttonA" id="btnUsadbaFull">R</div>
     </div>
