--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <title>WebGL 3D презентация</title>
   <link rel="icon" type="image/png" href="images/logotip_red_for_krug.png" />
   <link rel="stylesheet" href = "css/fonts.css"></link>
@@ -16,7 +17,7 @@
     <div class = "header">
       <div id="header1">
         <p style = "font-weight: 900" >WebGL</p>
-        <p style = "font-size: 14px">technology</p>
+        <p style = "font-size: 0.5em;">technology</p>
       </div>
       <!-- <div id="header3">3D PRESENTATION</div> -->
       <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
