--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p style = "font-size: 0.5em;">technology</p>
       </div>
       <!-- <div id="header3">3D PRESENTATION</div> -->
-      <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
+      <div id="header3">3d ПРЕЗЕНТАЦИЯ</div>
       <div id="header2">3dinsite@gmail.com<br>3donsite@mail.ru<br>8 917 889 87 71</div>
     </div>
 
@@ -101,6 +101,9 @@
       WebGL (Web Graphics Library) - технология, предназначенная для визуализации интерактивной 3D и 2D графики
         в браузере без использования плагинов.
     </div>
+
+  <ul id="list"></ul>
+
   </div>
 
   <!-- <div class = "colorpicker1" id="overlaySteel"></div> -->
