--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
       //gl_FragColor = vec4(vReflect, 1.0); // return redish-purple
     }
   </script>
+  <script src="js/fetch.js"></script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/three.min91.js"></script>
   <script src="js/libs/inflate.min.js"></script>
