--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+  <meta name="google-site-verification" content="60WnNfu5U8jMsYbj0ESCvLfe_wJub7YP0N0ERQJmkTo" />
   <title>WebGL 3D презентация</title>
   <link rel="icon" type="image/png" href="images/logotip_red_for_krug.png" />
   <link rel="stylesheet" href = "css/fonts.css"></link>
