--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <!-- <div id="header3">3D PRESENTATION</div> -->
       <div id="header3">3d ПРЕЗЕНТАЦИЯ</div>
-      <div id="header2">3dinsite@gmail.com<br>3dfine@mail.ru<br>8 917 889 87 71</div>
+      <div id="header2">ivat_cg@gmail.com<br>3dfine@mail.ru<br>8 917 889 87 71</div>
     </div>
 
     <div class="overlay" style = "display: none">
