--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p style = "font-size: 0.5em;">technology</p>
       </div>
       <!-- <div id="header3">3D PRESENTATION</div> -->
-      <div id="header3">3d ПРЕЗЕНТАЦИЯ</div>
+      <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
       <div id="header2">ivat_cg@mail.ru<br>3dfine@mail.ru<br>8 917 889 87 71</div>
     </div>
 
