--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <!-- <div id="header3">3D PRESENTATION</div> -->
       <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
-      <div id="header2">ivat_cg@mail.ru<br>3dfine@mail.ru<br>8 917 889 87 71</div>
+      <div id="header2">3dfine@mail.ru<br>3dfinecom@gmail.com<br>8 917 889 87 71</div>
     </div>
 
     <div class="overlay" style = "display: none">
@@ -97,7 +97,7 @@
       </div>
     </div>
 
-    <div id = "copyRight" >&copy A.E. Zaripov, 2018</div>
+    <div id = "copyRight" >&copy A.E. Zaripov, 2020</div>
     <div id="WebGLInfo">
       WebGL (Web Graphics Library) - технология, предназначенная для визуализации интерактивной 3D и 2D графики
         в браузере без использования плагинов.
